<resources>
    <string name="app_name">Inventory App</string>
    <string name="detail_activity">Item details</string>
    <string name="add_item_activity">Add item</string>
    <string name="dialog_activity">Dialog activity</string>

    <!--labels for the empty view-->
    <string name="empty_view_title_text">No items to display</string>
    <string name="empty_view_subtitle_text">Add an item</string>

    <!--labels for detail textviews-->
    <string name="price_title">Price</string>
    <string name="quantity_title">Quantity</string>
    <string name="supplier_title">Supplier</string>

    <!--labels for overall menu items-->
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="clear_all">Clear all</string>
    <string name="change_view">Change view</string>
    <string name="sort_by">Sort by</string>
    <!--labels for buttons and corresponding views in detail activity-->
    <string name="track_button">Track</string>
    <string name="track_item">Track item (sell)</string>
    <string name="order_button">Order</string>
    <string name="order_item">Order items</string>
    <string name="delete_button">Delete</string>
    <string name="delete_item">Delete item</string>

    <!--labels for dialog-->
    <string name="dialog_sell_title">Sell item(s)</string>
    <string name="dialog_sell_item_msg">Items sold...</string>
    <string name="dialog_sell_item_hint">Enter amount of items sold</string>
    <string name="dialog_order_title">Order item(s)</string>
    <string name="dialog_order_item_msg">Items to order...</string>
    <string name="dialog_order_item_hint">Enter amount of items to order</string>
    <string name="dialog_discard_action">Discard</string>
    <string name="dialog_submit_action">Submit</string>
    <string name="dialog_delete_title">Delete item</string>
    <string name="dialog_delete_msg">Delete this item from database?</string>
    <string name="dialog_clear_title">Clear database</string>
    <string name="dialog_clear_msg">Clear all items from database?</string>
    <string name="dialog_edit_title">Edit name</string>
    <string name="dialog_edit_msg">Edit supplier\'s name</string>
    <string name="dialog_edit_hint">New name (blank: no changes)</string>

    <!--labels for web and email when not provided-->
    <string name="web_not_provided">Web address not provided</string>
    <string name="email_not_provided">Email Address not provided</string>

    <!--labels for views in add item activity-->
    <string name="enter_price">Enter item\'s price</string>
    <string name="enter_quantity">Enter item\'s quantity</string>
    <string name="supplier_name">Supplier\'s Name</string>
    <string name="enter_supplier_name">Enter supplier\'s name</string>
    <string name="supplier_web">Supplier\'s Web</string>
    <string name="enter_supplier_web">Enter supplier\'s web address</string>
    <string name="supplier_email">Supplier\'s Email</string>
    <string name="enter_supplier_email">Enter supplier\'s email address</string>
    <string name="tap_take_photo">Tap to take a photo</string>
    <string name="tap_select_photo">Tap to select a photo</string>

    <!--labels for dummy data-->
    <string name="dummy_supplier_name">Hammer!</string>
    <string name="dummy_supplier_web">hammermegently.com</string>
    <string name="dummy_supplier_email">hammer@me.com</string>

    <!--labels for radio buttons-->
    <string name="sorty_by_title">Sort by</string>
    <string name="name_asc_radio_button">Name ascending</string>
    <string name="name_desc_radio_button">Name descending</string>
    <string name="price_asc_radio_button">Price ascending</string>
    <string name="price_desc_radio_button">Price descending</string>
    <string name="quantity_asc_radio_button">Quantity ascending</string>
    <string name="quantity_desc_radio_button">Quantity descending</string>
</resources>
