<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <RadioButton android:id="@+id/radio_name_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_asc_radio_button" />
        <RadioButton android:id="@+id/radio_name_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_desc_radio_button" />
        <RadioButton android:id="@+id/radio_price_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_asc_radio_button" />
        <RadioButton android:id="@+id/radio_price_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_desc_radio_button" />
        <RadioButton android:id="@+id/radio_quantity_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_asc_radio_button" />
        <RadioButton android:id="@+id/radio_quantity_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_desc_radio_button" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel" />
        <Button
            android:id="@+id/dialog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

</LinearLayout>
